[gd_scene load_steps=18 format=3 uid="uid://ra2c3mr66sx3"]

[ext_resource type="Script" path="res://BACKGROUND/REFRIGERATOR_RIGHT.gd" id="1_gquyx"]
[ext_resource type="Texture2D" uid="uid://gym227kuxgio" path="res://BACKGROUND/IMAGES/Refrigerator_Right_Open.png" id="1_jhg0m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k5xtp"]
size = Vector2(5, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a1cyp"]
size = Vector2(3, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1u1ex"]
size = Vector2(3, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uolm1"]
size = Vector2(6, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7phv3"]
size = Vector2(4, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7kg8s"]
size = Vector2(6, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_waql2"]
size = Vector2(2, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_un6gl"]
size = Vector2(4, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h23ti"]
size = Vector2(6, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i1d1x"]
size = Vector2(1, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0ug23"]
size = Vector2(2, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bv45c"]
size = Vector2(2, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_52xw2"]
size = Vector2(3, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dq8vp"]
size = Vector2(8, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_38cc5"]
size = Vector2(12, 43)

[node name="Refrigerator_Right" type="Node2D"]
script = ExtResource("1_gquyx")

[node name="Refrigerator_Right_Open" type="Sprite2D" parent="."]
texture = ExtResource("1_jhg0m")
centered = false

[node name="Open_Outs" type="Node2D" parent="."]

[node name="Stuff_Colliders" type="Node2D" parent="."]

[node name="Smoothie_Bottles_Collider" type="Area2D" parent="Stuff_Colliders"]
collision_layer = 2
metadata/bg_level = 2

[node name="Smoothie_Bottles" type="CollisionShape2D" parent="Stuff_Colliders/Smoothie_Bottles_Collider"]
position = Vector2(43.5, 33)
shape = SubResource("RectangleShape2D_k5xtp")

[node name="Smoothie_Bottles_Out" type="CollisionShape2D" parent="Stuff_Colliders/Smoothie_Bottles_Collider"]
position = Vector2(44.5, 33)
shape = SubResource("RectangleShape2D_a1cyp")

[node name="Fruit_Juice_Bottles_Collider" type="Area2D" parent="Stuff_Colliders"]
collision_layer = 2
metadata/bg_level = 2

[node name="Fruit_Juice_Bottles" type="CollisionShape2D" parent="Stuff_Colliders/Fruit_Juice_Bottles_Collider"]
position = Vector2(43.5, 41.5)
shape = SubResource("RectangleShape2D_1u1ex")

[node name="Milk_Bottles_Collider" type="Area2D" parent="Stuff_Colliders"]
collision_layer = 2
metadata/bg_level = 2

[node name="Milk_Bottles" type="CollisionShape2D" parent="Stuff_Colliders/Milk_Bottles_Collider"]
position = Vector2(43, 50)
shape = SubResource("RectangleShape2D_uolm1")

[node name="Milk_Bottle_Out" type="CollisionShape2D" parent="Stuff_Colliders/Milk_Bottles_Collider"]
visible = false
position = Vector2(44, 50)
shape = SubResource("RectangleShape2D_7phv3")

[node name="Butter_Knife_Collider" type="Area2D" parent="Stuff_Colliders"]
collision_layer = 2
metadata/bg_level = 2

[node name="Butter_Knife" type="CollisionShape2D" parent="Stuff_Colliders/Butter_Knife_Collider"]
position = Vector2(28, 27.5)
shape = SubResource("RectangleShape2D_7kg8s")

[node name="Cream_Pots_Collider" type="Area2D" parent="Stuff_Colliders"]
collision_layer = 2
metadata/bg_level = 2

[node name="Cream_Pots" type="CollisionShape2D" parent="Stuff_Colliders/Cream_Pots_Collider"]
position = Vector2(26, 34.5)
shape = SubResource("RectangleShape2D_waql2")

[node name="Yoghurts_Collider" type="Area2D" parent="Stuff_Colliders"]
collision_layer = 2
metadata/bg_level = 2

[node name="Yoghurts" type="CollisionShape2D" parent="Stuff_Colliders/Yoghurts_Collider"]
position = Vector2(29, 37)
shape = SubResource("RectangleShape2D_un6gl")

[node name="Sauce_Pan_Collider" type="Area2D" parent="Stuff_Colliders"]
collision_layer = 2
metadata/bg_level = 2

[node name="Sauce_Pan" type="CollisionPolygon2D" parent="Stuff_Colliders/Sauce_Pan_Collider"]
polygon = PackedVector2Array(27, 36, 27, 33, 29, 33, 29, 34, 33, 34, 33, 35, 29, 35, 29, 36)

[node name="Sauce_Pan_Yoghurts_Out" type="CollisionPolygon2D" parent="Stuff_Colliders/Sauce_Pan_Collider"]
visible = false
polygon = PackedVector2Array(27, 38, 27, 33, 29, 33, 29, 34, 33, 34, 33, 35, 29, 35, 29, 38)

[node name="Eggs_Collider" type="Area2D" parent="Stuff_Colliders"]
collision_layer = 2
metadata/bg_level = 2

[node name="Eggs" type="CollisionShape2D" parent="Stuff_Colliders/Eggs_Collider"]
position = Vector2(30, 44.5)
shape = SubResource("RectangleShape2D_h23ti")

[node name="Green_Pepper_Collider" type="Area2D" parent="Stuff_Colliders"]
collision_layer = 2
metadata/bg_level = 2

[node name="Green_Pepper" type="CollisionShape2D" parent="Stuff_Colliders/Green_Pepper_Collider"]
position = Vector2(25.5, 43)
shape = SubResource("RectangleShape2D_i1d1x")

[node name="Tomatoes_Collider" type="Area2D" parent="Stuff_Colliders"]
collision_layer = 2
metadata/bg_level = 2

[node name="Tomatoes" type="CollisionShape2D" parent="Stuff_Colliders/Tomatoes_Collider"]
position = Vector2(26, 45)
shape = SubResource("RectangleShape2D_0ug23")

[node name="Cauliflower_Collider" type="Area2D" parent="Stuff_Colliders"]
collision_layer = 2
metadata/bg_level = 2

[node name="Cauliflower" type="CollisionShape2D" parent="Stuff_Colliders/Cauliflower_Collider"]
position = Vector2(26, 52)
shape = SubResource("RectangleShape2D_bv45c")

[node name="Yellow_Pepper_Collider" type="Area2D" parent="Stuff_Colliders"]
collision_layer = 2
metadata/bg_level = 2

[node name="Yellow_Pepper" type="CollisionShape2D" parent="Stuff_Colliders/Yellow_Pepper_Collider"]
position = Vector2(28.5, 53)
shape = SubResource("RectangleShape2D_52xw2")

[node name="Fruits_Collider" type="Area2D" parent="Stuff_Colliders"]
collision_layer = 2
metadata/bg_level = 2

[node name="Fruits" type="CollisionShape2D" parent="Stuff_Colliders/Fruits_Collider"]
position = Vector2(29, 61)
shape = SubResource("RectangleShape2D_dq8vp")

[node name="Door_Collider" type="Area2D" parent="."]
position = Vector2(37.5, 42.5)
collision_layer = 2
collision_mask = 5
metadata/bg_level = 1

[node name="Door_Rectangle" type="CollisionShape2D" parent="Door_Collider"]
position = Vector2(6.5, 0)
shape = SubResource("RectangleShape2D_38cc5")
